--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "webpack-hot-middleware": "^2.17.1"
   },
   "dependencies": {
+    "axios": "^0.15.3",
     "vue": "^2.2.4",
     "vue-router": "^2.3.0",
     "vuex": "^2.2.1"
