--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "dependencies": {
     "axios": "^0.15.3",
+    "underscore": "^1.8.3",
     "vue": "^2.2.4",
     "vue-router": "^2.3.0",
     "vuex": "^2.2.1"
