--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-preset-stage-2": "^6.22.0",
     "babel-runtime": "^6.23.0",
     "clean-webpack-plugin": "^0.1.16",
+    "connect-history-api-fallback": "^1.3.0",
     "css-loader": "^0.27.3",
     "express": "^4.15.2",
     "extract-text-webpack-plugin": "^2.1.0",
