--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "node webpack.build.js"
   },
   "devDependencies": {
+    "autoprefixer": "^6.7.7",
     "autoprefixer-loader": "^3.2.0",
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
