--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   },
   "dependencies": {
     "axios": "^0.15.3",
+    "font-awesome": "^4.7.0",
     "underscore": "^1.8.3",
     "vue": "^2.2.4",
     "vue-router": "^2.3.0",
